--- a/css/style.css
+++ b/css/style.css
@@ -67,9 +67,9 @@ body {
     flex-direction: column;
 }
 .auction-wrapper div {
-    width: 100%;
+    width: 49%;
     background-color: rgb(180, 192, 188);
-    border: 1px solid black;
+    border-bottom: 1px solid black;
 }
 .auction-wrapper li {
     list-style: none;
