--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
 .navigation-wrapper {
     width: 100%;
     background-color: #5fa09a;
+    margin-bottom: 1em;
 }
 .navigation-content {
     max-width: 1024px;
@@ -61,15 +62,21 @@ body {
 }
 
 .auction-wrapper {
+    max-width: 1024px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
+    flex-wrap: wrap;
 }
 .auction-wrapper div {
-    width: 49%;
+    width: 32%;
     background-color: rgb(180, 192, 188);
-    border-bottom: 1px solid black;
+    padding: 0.5em;
+    margin-bottom: 1em;
+}
+.auction-wrapper ul {
+    margin: 0;
+    padding: 0;
 }
 .auction-wrapper li {
     list-style: none;
