--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
 .navigation-wrapper {
     width: 100%;
     background-color: #F53656;
-    margin-bottom: 1em;
 }
 .navigation-content {
     max-width: 1024px;
@@ -68,18 +67,18 @@ body {
 }
 
 .auction-wrapper div {
-    width: 32%;
-    background-color: rgb(180, 192, 188);
+    width: 50%;
+    background-color: #24292E;
+    border-bottom: 1px solid black;
     padding: 1em;
-    margin-bottom: 1em;
 }
 
 .auction-wrapper h1 {
-    color: white;  
+    color: white;
 }
 
 .auction-wrapper h4 {
-    color: white;  
+    color: white;
 }
 
 .auction-wrapper h5 {
