--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,9 @@ body {
     font-size: 1.3em;
     color: #F53656;
 }
+article div p {
+    display: none;
+}
+article div p:last-child {
+    display: block;
+}
