--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,12 @@ body {
     font-weight: 300;
     line-height: 1.5;
     margin: 0;
+    background-color: #f8f8f8;
 }
 .navigation-wrapper {
     width: 100%;
     background-color: #F53656;
+    margin-bottom: 1em;
 }
 .navigation-content {
     max-width: 1024px;
@@ -53,7 +55,7 @@ body {
     background-color: #ddd;
 }
 .search:focus {
-  outline-color: black;
+    outline-color: black;
 }
 .search img {
     height: 20px;
@@ -62,22 +64,39 @@ body {
 
 .auction-wrapper {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-width: 1024px;
+    margin: 0 auto;
+}
+.article-wrapper {
+    width: 32%;
+    background-color: #fff;
+    padding: 1em;
+    border: 1px solid #ddd;
+    margin-bottom: 1em;
     text-align: center;
 }
-.auction-wrapper article {
-    display: flex;
+.article-wrapper h1 {
+    margin-top: 0.5em;
 }
-
-.auction-wrapper div {
-    width: 50%;
-    background-color: #24292E;
-    border-bottom: 1px solid black;
-    padding: 1em;
-    color: #fff;
+.article-wrapper input:hover {
+    cursor: pointer;
 }
 .big {
-    font-size: 1.3em;
-    color: #F53656;
+    font-weight: bold;
+    margin-bottom: 0;
 }
-
+.auction-info {
+    display: flex;
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+.auction-info div {
+    width: 50%;
+    padding: 2em;
+}
+.auction-info h1 {
+  margin-top: 0;
+}
