--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ body {
     border: 1px solid #ddd;
     margin-bottom: 1em;
     text-align: center;
+    box-shadow: 6px 6px 2px 1px rgba(0, 0, 255, .2);
 }
 .article-wrapper h1 {
     margin-top: 0.5em;
@@ -99,12 +100,4 @@ body {
 }
 .auction-info h1 {
   margin-top: 0;
-}
-.btn {
-    background-color: #F53656;
-    border: none;
-    color: white;
-    padding: 0.5em 1em;
-    text-align: center;
-    cursor: pointer;
 }
