--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,19 @@ body {
     height: 20px;
     width: 20px;
 }
-
+.sort-wrapper {
+  text-align: right;
+  max-width: 1024px;
+  margin: 0 auto;
+  margin-bottom: 1em;
+}
+.sort-wrapper p {
+    display: inline-block;
+    margin: 0;
+}
+.sort-wrapper input {
+    margin-left: 1em;
+}
 .auction-wrapper {
     display: flex;
     justify-content: space-between;
@@ -97,8 +109,30 @@ body {
     width: 50%;
     padding: 2em;
 }
+.bid-div {
+  text-align: right;
+}
 .auction-info h1 {
-  margin-top: 0;
+    margin-top: 0;
+}
+.auction-info input[type='text']{
+    width: 200px;
+    padding: 0.5em;
+}
+.auction-info input[type='button']{
+    padding: 0.5em;
+    width: 200px;
+    background-color: #F53656;
+    border: none;
+    margin-top: 1em;
+    color: #fff;
+    cursor: pointer;
+}
+#show-bids {
+    background-color: #fff;
+    border: 1px solid #000;
+    width: auto;
+    color: #000;
 }
 .btn {
     background-color: #F53656;
