--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ body {
     padding: 2em;
 }
 .bid-div {
-  text-align: right;
+  text-align: center;
 }
 .auction-info h1 {
     margin-top: 0;
@@ -118,6 +118,7 @@ body {
 .auction-info input[type='text']{
     width: 200px;
     padding: 0.5em;
+    margin-bottom: 1em;
 }
 .auction-info input[type='button']{
     padding: 0.5em;
@@ -127,12 +128,14 @@ body {
     margin-top: 1em;
     color: #fff;
     cursor: pointer;
+    margin: 0 auto;
+    display: block;
 }
 #show-bids {
     background-color: #fff;
-    border: 1px solid #000;
+    border: none;
     width: auto;
-    color: #000;
+    color: #0654ba;
 }
 .btn {
     background-color: #F53656;
