--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
     width: 100%;
     background-color: #F53656;
     margin-bottom: 1em;
+    padding: 0 1em;
 }
 .navigation-content {
     max-width: 1024px;
@@ -80,6 +81,7 @@ body {
     flex-wrap: wrap;
     max-width: 1024px;
     margin: 0 auto;
+    padding: 0 1em;
 }
 .article-wrapper {
     width: 32%;
